examples/typechecking/member_access.an
type FooBar = foo:I32, bar:String
type Foo = foo:F64
type Bar = bar:Char

stringify (s: String) = s

foo_and_bar a b =
    a.foo
    stringify b.bar

foobar = FooBar 1 "one"
foo = Foo 2.0
bar = Bar '3'

main () =
    foo_and_bar foobar foobar
    foo_and_bar foo bar
    ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type FooBar =
//     foo: I32
//     bar: String
// 
// type Foo =
//     foo: F64
// 
// type Bar =
//     bar: Char
// 
// (stringify: fn String -> String pure) ((s: String)) pure = (s: String)
// 
// (foo_and_bar: fn _ _ -> String pure) (a: _) (b: _) pure =
//     (a: _).foo
//     (stringify: fn String -> String pure) (b: _).bar
// 
// (foobar: FooBar) = (FooBar: fn I32 String -> FooBar pure) 1 "one"
// 
// (foo: Foo) = (Foo: fn F64 -> Foo pure) 2.0
// 
// (bar: Bar) = (Bar: fn Char -> Bar pure) '3'
// 
// (main: fn Unit -> Unit pure) () pure =
//     (foo_and_bar: fn FooBar FooBar -> String pure) (foobar: FooBar) (foobar: FooBar)
//     (foo_and_bar: fn Foo Bar -> String pure) (foo: Foo) (bar: Bar)
//     ()

// expected stderr:
// examples/typechecking/member_access.an:8:6
//  7 | foo_and_bar a b =
//  8 |     a.foo	// error: Object type must be known by this point to access its field
//    |      ^^^^
//  9 |     stringify b.bar
// 
// examples/typechecking/member_access.an:9:16
//  8 |     a.foo
//  9 |     stringify b.bar	// error: Object type must be known by this point to access its field
//    |                ^^^^
// 
// Found 2 errors and 0 warnings

